# zuban

./: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/licensing/: Cargo.toml
crates/licensing/src/: lib.rs  main.rs
crates/logging_config/: Cargo.toml
crates/logging_config/src/: lib.rs
crates/parsa/: Cargo.toml
crates/parsa/src/: lib.rs
crates/parsa_python/: Cargo.toml
crates/parsa_python/src/: lib.rs
crates/parsa_python_cst/: Cargo.toml
crates/parsa_python_cst/src/: lib.rs  ranges.rs
crates/primer/: Cargo.toml
crates/primer/src/: main.rs
crates/scripts/: Cargo.toml
crates/scripts/src/: main.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs  vfs.rs
crates/zmypy/: Cargo.toml
crates/zmypy/src/: lib.rs
crates/zuban/: Cargo.toml
crates/zuban/src/: lib.rs
crates/zuban_benchmark/: Cargo.toml
crates/zuban_benchmark/benches/: parsa_python.rs  zuban_python.rs
crates/zuban_benchmark/src/: lib.rs
crates/zuban_python/: Cargo.toml
crates/zuban_python/src/: lib.rs
crates/zuban_python/tests/blackbox/: main.rs
crates/zuban_python/tests/integration/: main.rs  signature_tests.rs
crates/zuban_python/tests/mypylike/: ide.rs  main.rs
crates/zubanls/: Cargo.toml
crates/zubanls/src/: lib.rs
crates/zubanls/tests/slow-tests/: main.rs
scripts/: .install-locally.sh.swp
