[package]
name = "licensing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
utils.workspace = true

anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

ed25519-dalek = "*"
mimalloc = { version = "*", optional = true }
jemallocator = { version = "*", optional = true }

[features]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]
