[package]
name = "parsa_python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
parsa.workspace = true
lazy_static.workspace = true
regex.workspace = true
mimalloc = { version = "*", optional = true }
jemallocator = { version = "*", optional = true }

[features]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]

[dev-dependencies]
insta.workspace = true
utils.workspace = true
