[package]
name = "primer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
zmypy.workspace = true
test_utils.workspace = true

clap.workspace = true
logging_config.workspace = true
mimalloc = { version = "*", optional = true }
jemallocator = { version = "*", optional = true }

[features]
zuban_debug = ["zmypy/zuban_debug"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]
