[package]
name = "utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fnv.workspace = true
dirs.workspace = true
mimalloc = { version = "*", optional = true }

[target.'cfg(target_env = "gnu")'.dependencies]
jemallocator = { version = "*", optional = true }

[features]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]
