[package]
name = "zuban"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
logging_config.workspace = true
zmypy.workspace = true
zubanls.workspace = true

anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
mimalloc = { version = "*", optional = true }

[target.'cfg(target_env = "gnu")'.dependencies]
jemallocator = { version = "*", optional = true }

[features]
zuban_debug = ["zmypy/zuban_debug", "zubanls/zuban_debug"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]
