[package]
name = "zuban_python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
parsa_python_cst.workspace = true
utils.workspace = true
vfs.workspace = true

anyhow.workspace = true
colored.workspace = true
config.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
regex.workspace = true
tracing.workspace = true
lsp-types.workspace = true
rayon.workspace = true
which = "*"
mimalloc = { version = "*", optional = true }
jemallocator = { version = "*", optional = true }

[dev-dependencies]
clap.workspace = true
test_utils.workspace = true
logging_config.workspace = true
shlex = "*"
mimalloc = "*"
jemallocator = "*"

[features]
zuban_debug = []
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]

[[test]]
name = "blackbox"
harness = false

[[test]]
name = "mypylike"
harness = false
